add favicon in head

--- a/website/templates/head.html
+++ b/website/templates/head.html
@@ -1,3 +1,5 @@
 <head>
+  <link href="{{ STATIC_URL }}images/favicon.ico" rel="icon"
+    type="image/x-icon">
   <title>Laura Erickson's For the Birds</title>
 </head>
