--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -4,6 +4,8 @@
 
   <body>
     {% include "header.html" %}
-    {% block content %}{% endblock %}
+    <div id="content">
+      {% block content %}{% endblock %}
+    </div>
   </body>
 </html>
