--- a/website/templates/head.html
+++ b/website/templates/head.html
@@ -1,5 +1,8 @@
 <head>
   <link href="{{ STATIC_URL }}images/favicon.ico" rel="icon"
-    type="image/x-icon">
+    type="image/x-icon" />
+  <link href="{{ STATIC_URL }}stylesheets/styles.css"
+    rel="stylesheet" type="text/css" />
+
   <title>Laura Erickson's For the Birds</title>
 </head>
