background now gray

--- a/website/static/stylesheets/styles.css
+++ b/website/static/stylesheets/styles.css
@@ -1,1 +1,1 @@
-h1{font-weight:normal}html,body{min-width:100%;margin:0;background:#3c3a47}#header{width:100%}#content{margin:0 auto;min-height:500px;background:#e2dece;padding:30px;margin:0 50px;border-radius:10px}#header{text-align:center}#header h1{color:#deedf2}
+font{color:#3c3a47}h1{font-weight:normal}html,body{min-width:100%;margin:0;background:#777e86}#header{width:100%}#content{margin:0 auto;min-height:500px;background:#e2dece;padding:30px;margin:0 50px;border-radius:10px}#header{text-align:center}#header h1{color:#deedf2}
