--- a/website/static/stylesheets/page.sass
+++ b/website/static/stylesheets/page.sass
@@ -1,7 +1,7 @@
 html, body
   min-width: 100%
   margin: 0
-  background: $chickadee-black
+  background: $chickadee-dark-gray
 
 #header
   width: 100%
