--- a/website/templates/head.html
+++ b/website/templates/head.html
@@ -1,4 +1,6 @@
 <head>
+  <link href='http://fonts.googleapis.com/css?family=Lora:400,700,400italic'
+    rel='stylesheet' type='text/css'>
   <link href="{{ STATIC_URL }}images/favicon.ico" rel="icon"
     type="image/x-icon" />
   <link href="{{ STATIC_URL }}stylesheets/styles.css"
