--- a/website/static/stylesheets/font.sass
+++ b/website/static/stylesheets/font.sass
@@ -1,5 +1,6 @@
 body
-  font-family: 'Lora', sans-serif
+  font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif
+  font-size: 16px
   color: $chickadee-black
 
 h1
