--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -1,5 +1,21 @@
 {% extends "base.html" %}
 
 {% block content %}
-  Welcome to Laura's new web page!
+  This is the PT Serif: Welcome to Laura's new web page!
+  <br>
+  <br>
+  <br>
+  <br>
+
+  <div id="testA">
+    This is Palatino: Welcome to Laura's new web page!
+  </div>
+  <br>
+  <br>
+  <br>
+  <br>
+
+  <div id="testB">
+    This is Georgia: Welcome to Laura's new web page!
+  </div>
 {% endblock %}
