--- a/website/static/stylesheets/font.sass
+++ b/website/static/stylesheets/font.sass
@@ -1,7 +1,13 @@
 body
-  font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif
+  font-family: "PT Serif", serif
   font-size: 16px
   color: $chickadee-black
 
 h1
   font-weight: normal
+
+#testA
+  font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif
+
+#testB
+  font-family: Georgia, serif
