--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -1,13 +1,15 @@
 {% extends "base.html" %}
 
 {% block content %}
-  This is the PT Serif: Welcome to Laura's new web page!
+  <div id="georgiaTest">
+    This is Georgia: Welcome to Laura's new web page!
+  </div>
   <br>
   <br>
   <br>
   <br>
 
-  <div id="testA">
+  <div id="palatinoTest">
     This is Palatino: Welcome to Laura's new web page!
   </div>
   <br>
@@ -15,7 +17,8 @@
   <br>
   <br>
 
-  <div id="testB">
-    This is Georgia: Welcome to Laura's new web page!
+  <div id="ptTest">
+    This is PT Serif: Welcome to Laura's new web page!
   </div>
+
 {% endblock %}
