--- a/website/static/stylesheets/font.sass
+++ b/website/static/stylesheets/font.sass
@@ -6,8 +6,11 @@ body
 h1
   font-weight: normal
 
-#testA
+#ptTest
+  font-family: "PT Serif", serif
+
+#palatinoTest
   font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif
 
-#testB
+#georgiaTest
   font-family: Georgia, serif
