--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -1,24 +1,5 @@
 {% extends "base.html" %}
 
 {% block content %}
-  <div id="georgiaTest">
-    This is Georgia: Welcome to Laura's new web page!
-  </div>
-  <br>
-  <br>
-  <br>
-  <br>
-
-  <div id="palatinoTest">
-    This is Palatino: Welcome to Laura's new web page!
-  </div>
-  <br>
-  <br>
-  <br>
-  <br>
-
-  <div id="ptTest">
-    This is PT Serif: Welcome to Laura's new web page!
-  </div>
-
+  Welcome to Laura's new web page!
 {% endblock %}
