more barebones page structure

--- a/website/static/stylesheets/page.sass
+++ b/website/static/stylesheets/page.sass
@@ -3,13 +3,18 @@ html, body
   margin: 0
   background: $chickadee-dark-gray
 
+#header, #content, #footer
+  margin: 0 50px
+
 #header
-  width: 100%
+  position: relative
 
 #content
-  margin: 0 auto
   min-height: 500px
   background: $chickadee-cream-alt
   padding: 30px
-  margin: 0 50px
   border-radius: 10px
+
+#footer
+  margin-top: 20px
+  margin-bottom: 10px
