--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -5,7 +5,9 @@
   <body>
     {% include "header.html" %}
     <div id="content">
+      {% include "menu.html" %}
       {% block content %}{% endblock %}
     </div>
+    {% include "footer.html" %}
   </body>
 </html>
