--- a/website/templates/footer.html
+++ b/website/templates/footer.html
@@ -1,5 +1,12 @@
 <div id="footer">
   <div id="copyright">
+    All writing, images, videos, and sound recordings are
+    copyrighted 1997-{% now "Y" %} by Laura L. Erickson.
+    <br>
+    Website built by
+    <a href="http://katherineerickson.com/">Katherine Erickson</a>,
+    code on <a href="https://github.com/katur/forthebirds">Github</a>.
+    <!--
     All my writing, images, videos, and sound recordings are copyrighted
     1997-{% now "Y" %} by Laura L. Erickson.
     <br>
@@ -15,5 +22,6 @@
     written permission from me.
     You can ask for permission by
     <a href="mailto:chickadee@lauraerickson.com">emailing me</a>.
+    -->
   </div>
 </div>
