--- a/website/static/stylesheets/header.sass
+++ b/website/static/stylesheets/header.sass
@@ -3,8 +3,9 @@
 
   h1
     color: $chickadee-white
+    margin-top: 10px
+    margin-bottom: 10px
 
-  #login
-    position: absolute
-    top: 0
-    right: 0
+  #menu
+    a
+      padding: 0 20px
