--- a/website/static/stylesheets/page.sass
+++ b/website/static/stylesheets/page.sass
@@ -14,6 +14,7 @@ html, body
   background: $chickadee-cream-alt
   padding: 30px
   border-radius: 10px
+  margin-top: 20px
 
 #footer
   margin-top: 20px
