--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -5,7 +5,7 @@
   <body>
     {% include "header.html" %}
     <div id="content">
-      {% include "menu.html" %}
+      <h2>{% block page_title %}{% endblock%}</h2>
       {% block content %}{% endblock %}
     </div>
     {% include "footer.html" %}
