--- a/website/templates/head.html
+++ b/website/templates/head.html
@@ -4,5 +4,11 @@
   <link href="{{ STATIC_URL }}stylesheets/styles.css"
     rel="stylesheet" type="text/css" />
 
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"
+    type="text/javascript"></script>
+
+  <script src="{{ STATIC_URL }}js/birds.js"
+    type="text/javascript"></script>
+
   <title>Laura Erickson's For the Birds</title>
 </head>
