--- a/website/static/stylesheets/styles.sass
+++ b/website/static/stylesheets/styles.sass
@@ -4,8 +4,9 @@ $chickadee-white: #deedf2 // #ebebf5
 $chickadee-gray: #cfd3cf // #c3c8c4
 $chickadee-dark-gray: #777e86
 $chickadee-black: #3c3a47
-$moss-light-green: #bdc4bc
-$moss-dark-green: #4c5a43
+$moss-light: #b9c4b4
+$moss: #788c6d
+$moss-dark: #52563b
 
 @import font
 @import page
