--- a/website/static/stylesheets/page.sass
+++ b/website/static/stylesheets/page.sass
@@ -11,9 +11,9 @@ html, body
 
 #content
   min-height: 500px
-  background: $chickadee-cream-alt
+  background: $chickadee-cream
   padding: 30px
-  border-radius: 10px
+  border-radius: 2px
   margin-top: 20px
 
 #footer
