--- a/website/templates/header.html
+++ b/website/templates/header.html
@@ -19,6 +19,6 @@
       Birds
     </a>
 
-    <a id="login" href="admin">Site Admin</a>
+    <a id="login" href="admin">Admin</a>
   </div>
 </div>
