--- a/website/static/stylesheets/styles.sass
+++ b/website/static/stylesheets/styles.sass
@@ -1,12 +1,11 @@
-$chickadee-cream: #e0d6d0  // #d3c5bc
-$chickadee-cream-alt: #e2dece // #cfc8ae
-$chickadee-white: #deedf2 // #ebebf5
-$chickadee-gray: #cfd3cf // #c3c8c4
+$chickadee-cream: #f5f4ee
+$chickadee-white: #deedf2
+$chickadee-gray: #cfd3cf
 $chickadee-dark-gray: #777e86
 $chickadee-black: #3c3a47
 $moss-light: #b9c4b4
 $moss: #788c6d
-$moss-dark: #52563b
+$moss-dark: #606545
 
 @import font
 @import page
