--- a/website/static/stylesheets/styles.sass
+++ b/website/static/stylesheets/styles.sass
@@ -5,7 +5,7 @@ $chickadee-dark-gray: #777e86
 $chickadee-black: #3c3a47
 $moss-light: #b9c4b4
 $moss: #788c6d
-$moss-dark: #606545
+$moss-dark: #63664e
 
 @import font
 @import page
