change moss-scale link colors to peach-scale

--- a/birds/static/stylesheets/birds.sass
+++ b/birds/static/stylesheets/birds.sass
@@ -16,10 +16,10 @@ ul
   &::after, &::before
     content: ' '
     position: absolute
-    background: $moss
+    background: $peach-pink
 
     &:hover
-      background: $moss-dark
+      background: $peach-orange
 
   &::after
     top: 3px
@@ -35,7 +35,7 @@ ul
 
   &.minus
     &::after
-      background: $moss-dark
+      background: $peach-orange
 
     &::before
       display: none
