--- a/website/static/stylesheets/font.sass
+++ b/website/static/stylesheets/font.sass
@@ -13,7 +13,7 @@ h2
 
 a
   text-decoration: none
-  color: $moss
+  color: $peach-pink
 
   &:hover, &.active
-    color: $moss-dark
+    color: $peach-orange
