--- a/website/static/stylesheets/styles.sass
+++ b/website/static/stylesheets/styles.sass
@@ -6,6 +6,8 @@ $chickadee-black: #3c3a47
 $moss-light: #b9c4b4
 $moss: #788c6d
 $moss-dark: #63664e
+$peach-pink: #de8d88
+$peach-orange: #deb888
 
 @import font
 @import page
