style the no-subfamily case, and autoexpand

--- a/birds/static/stylesheets/birds.sass
+++ b/birds/static/stylesheets/birds.sass
@@ -3,6 +3,12 @@ ul
   &.collapsed
     display: none
 
+  li
+    &.no-subfamily
+      font-size: 14px
+      font-style: italic
+      color: gray
+
 .plus-sign
   position: relative
   top: -1px
