--- a/website/static/stylesheets/font.sass
+++ b/website/static/stylesheets/font.sass
@@ -1,3 +1,13 @@
+@font-face
+  font-family: 'adelaida'
+  src: url('../fonts/adelaida/adelaida-regular-webfont.eot')
+  src: url('../fonts/adelaida/adelaida-regular-webfont.eot?#iefix') format('embedded-opentype')
+  src: url('../fonts/adelaida/adelaida-regular-webfont.woff') format('woff')
+  src: url('../fonts/adelaida/adelaida-regular-webfont.ttf') format('truetype')
+  src: url('../fonts/adelaida/adelaida-regular-webfont.svg#adelaidaregular') format('svg')
+  font-weight: normal
+  font-style: normal
+
 body
   font-family: Georgia, serif
   font-size: 17px
@@ -7,6 +17,11 @@ h1, h2, h3, h4
   margin: 0
   padding: 0
   font-weight: normal
+
+h1
+  font-family: 'adelaida', sans-serif
+  font-size: 85px
+  letter-spacing: 8px
 
 h2
   font-weight: bold
