--- a/website/templates/head.html
+++ b/website/templates/head.html
@@ -3,10 +3,12 @@
     type="image/x-icon" />
   <link href="{{ STATIC_URL }}stylesheets/styles.css"
     rel="stylesheet" type="text/css" />
+  <link href="{{ STATIC_URL }}fonts/adelaida/styles.css"
+    rel="stylesheet" type="text/css" />
+
 
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"
     type="text/javascript"></script>
-
   <script src="{{ STATIC_URL }}js/birds.js"
     type="text/javascript"></script>
 
