--- a/website/templates/header.html
+++ b/website/templates/header.html
@@ -1,10 +1,11 @@
+{% url 'home_url' as home_url %}
+{% url 'birds_url' as birds_url %}
 <div id="header">
-  <h1>Laura Erickson's For the Birds</h1>
+  <a href="{{ home_url }}">
+    <h1>Laura Erickson's For the Birds</h1>
+  </a>
 
   <div id="menu">
-    {% url 'home_url' as home_url %}
-    {% url 'birds_url' as birds_url %}
-
     <a href="{{ home_url }}"
         {% ifequal request.path home_url %}
         class="active"
