add basic customizations to admin index page: link back to website, title

--- a/website/templates/header.html
+++ b/website/templates/header.html
@@ -20,6 +20,6 @@
       Birds
     </a>
 
-    <a id="login" href="admin">Admin</a>
+    <a href="{% url 'admin:index' %}">Admin</a>
   </div>
 </div>
