--- a/website/static/stylesheets/font.sass
+++ b/website/static/stylesheets/font.sass
@@ -8,6 +8,8 @@
   font-weight: normal
   font-style: normal
 
+@import url(http://fonts.googleapis.com/css?family=Dosis:500)
+
 body
   font-family: Georgia, serif
   font-size: 17px
@@ -24,7 +26,11 @@ h1
   letter-spacing: 8px
 
 h2
-  font-weight: bold
+  font-family: 'Dosis', sans-serif
+  font-weight: 500
+  font-size: 30px
+  letter-spacing: 1px
+  color: $chickadee-dark-gray
 
 a
   text-decoration: none
