--- a/website/static/stylesheets/header.sass
+++ b/website/static/stylesheets/header.sass
@@ -7,3 +7,7 @@
   #menu
     a
       padding: 0 20px
+      color: lighten($peach-pink, 7%)
+
+      &:hover, &.active
+        color: lighten($peach-orange, 5%)
