--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 
+{% block body_id %}home{% endblock %}
+
 {% block content %}
   Welcome to Laura's new web page!
 {% endblock %}
