--- a/birds/static/stylesheets/birds.sass
+++ b/birds/static/stylesheets/birds.sass
@@ -1,47 +1,54 @@
-ul
-  line-height: 150%
-  &.collapsed
-    display: none
+#birds
+  ul
+    line-height: 150%
+    &.collapsed
+      display: none
 
-  li
-    &.no-subfamily
-      font-size: 14px
-      font-style: italic
-      color: gray
+    li
+      &.no-subfamily
+        font-size: 14px
+        font-style: italic
+        color: gray
 
-.plus-sign
-  position: relative
-  top: -1px
-  display: inline-block
-  width: 8px
-  height: 8px
-
-  &:hover
-    cursor: pointer
-
-  &::after, &::before
-    content: ' '
-    position: absolute
-    background: $peach-pink
-
-    &:hover
-      background: $peach-orange
-
-  &::after
-    top: 3px
-    left: 0
+  .plus-sign
+    position: relative
+    top: -1px
+    display: inline-block
     width: 8px
-    height: 2px
-
-  &::before
-    top: 0
-    left: 3px
-    width: 2px
     height: 8px
 
-  &.minus
+    &:hover
+      cursor: pointer
+
+    &::after, &::before
+      content: ' '
+      position: absolute
+      background: $peach-pink
+
+      &:hover
+        background: $peach-orange
+
     &::after
-      background: $peach-orange
+      top: 3px
+      left: 0
+      width: 8px
+      height: 2px
 
     &::before
-      display: none
+      top: 0
+      left: 3px
+      width: 2px
+      height: 8px
+
+    &.minus
+      &::after
+        background: $peach-orange
+
+      &::before
+        display: none
+
+#bird
+  #taxonomy
+    span
+      display: block
+      clear: both
