add NACC info to bird page

--- a/birds/static/stylesheets/birds.sass
+++ b/birds/static/stylesheets/birds.sass
@@ -48,7 +48,18 @@
         display: none
 
 #bird
-  #taxonomy
+  .card
+    display: inline-block
+    float: left
+    clear: both
+    padding: 10px
+    margin-bottom: 20px
+    border: 1px solid $chickadee-light-gray
+    border-radius: 5px
+
+    h3
+      margin-bottom: 10px
+
     span
       display: block
       clear: both
