--- a/website/static/stylesheets/font.sass
+++ b/website/static/stylesheets/font.sass
@@ -8,7 +8,7 @@
   font-weight: normal
   font-style: normal
 
-@import url(http://fonts.googleapis.com/css?family=Dosis:500)
+@import url(http://fonts.googleapis.com/css?family=Dosis:500,600,700,800)
 
 body
   font-family: Georgia, serif
@@ -26,11 +26,20 @@ h1
   letter-spacing: 8px
 
 h2
+  font-size: 30px
+  color: $chickadee-dark-gray
   font-family: 'Dosis', sans-serif
   font-weight: 500
-  font-size: 30px
   letter-spacing: 1px
-  color: $chickadee-dark-gray
+
+h3
+  text-align: center
+  font-size: 24px
+  color: $chickadee-gray
+  font-family: 'Dosis', sans-serif
+  font-variant: small-caps
+  font-weight: 600
+  letter-spacing: 2px
 
 a
   text-decoration: none
