--- a/website/static/stylesheets/styles.sass
+++ b/website/static/stylesheets/styles.sass
@@ -1,6 +1,7 @@
 $chickadee-cream: #f5f4ee
 $chickadee-white: #deedf2
-$chickadee-gray: #cfd3cf
+$chickadee-light-gray: #cfd3cf
+$chickadee-gray: #9ba5a9
 $chickadee-dark-gray: #777e86
 $chickadee-black: #3c3a47
 $moss-light: #b9c4b4
