menu font styling

--- a/website/static/stylesheets/header.sass
+++ b/website/static/stylesheets/header.sass
@@ -5,6 +5,10 @@
     color: $chickadee-white
 
   #menu
+    font-family: 'Dosis', sans-serif
+    font-weight: 200
+    font-size: 22px
+    letter-spacing: 1px
     a
       padding: 0 20px
       color: lighten($peach-pink, 7%)
