set heights of site title and menu so loads properly before fonts

--- a/website/static/stylesheets/header.sass
+++ b/website/static/stylesheets/header.sass
@@ -3,12 +3,14 @@
 
   h1
     color: $chickadee-white
+    height: 102px
 
   #menu
     font-family: 'Dosis', sans-serif
     font-weight: 200
     font-size: 22px
     letter-spacing: 1px
+    height: 28px
     a
       padding: 0 20px
       color: lighten($peach-pink, 7%)
