add home styles

--- a/website/static/stylesheets/styles.sass
+++ b/website/static/stylesheets/styles.sass
@@ -15,4 +15,5 @@ $peach-orange: #deb888
 @import header
 @import menu
 @import footer
+@import home
 @import ../../../birds/static/stylesheets/birds
