separate 'laura erickson's' from title

--- a/website/static/stylesheets/header.sass
+++ b/website/static/stylesheets/header.sass
@@ -1,13 +1,20 @@
 #header
+  color: $chickadee-white
+  font-family: 'Dosis', sans-serif
+  font-size: 20px
+  font-weight: 200
   text-align: center
+  height: 156px
 
   h1
+    position: relative
+    top: -10px
     color: $chickadee-white
     height: 102px
 
   #menu
-    font-family: 'Dosis', sans-serif
-    font-weight: 200
+    position: relative
+    top: -12px
     font-size: 22px
     letter-spacing: 1px
     height: 28px
