--- a/website/templates/header.html
+++ b/website/templates/header.html
@@ -1,8 +1,9 @@
 {% url 'home_url' as home_url %}
 {% url 'birds_url' as birds_url %}
 <div id="header">
+  Laura Erickson's
   <a href="{{ home_url }}">
-    <h1>Laura Erickson's For the Birds</h1>
+    <h1>For the Birds</h1>
   </a>
 
   <div id="menu">
