--- a/website/static/stylesheets/font.sass
+++ b/website/static/stylesheets/font.sass
@@ -11,8 +11,8 @@
 @import url(http://fonts.googleapis.com/css?family=Dosis:200,500,600)
 
 body
-  font-family: Georgia, serif
-  font-size: 17px
+  font-family: $base-font-family
+  font-size: $base-font-size
   color: $chickadee-black
 
 h1, h2, h3, h4
@@ -22,24 +22,21 @@ h1, h2, h3, h4
 
 h1
   font-family: 'adelaida', sans-serif
-  font-size: 85px
-  letter-spacing: 8px
 
 h2
-  font-size: 30px
-  color: $chickadee-dark-gray
   font-family: 'Dosis', sans-serif
   font-weight: 500
+  font-size: 30px
   letter-spacing: 1px
+  color: $chickadee-dark-gray
 
 h3
-  text-align: center
-  font-size: 24px
-  color: $chickadee-gray
   font-family: 'Dosis', sans-serif
   font-variant: small-caps
   font-weight: 600
+  font-size: 24px
   letter-spacing: 2px
+  color: $chickadee-gray
 
 a
   text-decoration: none
