--- a/website/static/stylesheets/header.sass
+++ b/website/static/stylesheets/header.sass
@@ -9,8 +9,10 @@
   h1
     position: relative
     top: -10px
-    color: $chickadee-white
     height: 102px
+    font-size: 85px
+    letter-spacing: 8px
+    color: $chickadee-white
 
   #menu
     position: relative
