--- a/website/static/stylesheets/styles.sass
+++ b/website/static/stylesheets/styles.sass
@@ -9,8 +9,11 @@ $moss: #788c6d
 $moss-dark: #63664e
 $peach-pink: #de8d88
 $peach-orange: #deb888
+$base-font-size: 17px
+$base-font-family: Georgia, serif
 
 @import font
+@import elements
 @import page
 @import header
 @import menu
