--- a/birds/static/stylesheets/birds.sass
+++ b/birds/static/stylesheets/birds.sass
@@ -51,6 +51,9 @@
         display: none
 
 #bird
+  #main-photo
+    float: left
+
   .card
     display: inline-block
     float: left
@@ -62,7 +65,13 @@
 
     h3
       margin-bottom: 10px
+      text-align: center
 
     span
       display: block
       clear: both
+
+  #blurb
+    float: left
+    width: 100%
+    clear: both
