style bird page with img

--- a/website/static/stylesheets/styles.sass
+++ b/website/static/stylesheets/styles.sass
@@ -19,4 +19,5 @@ $base-font-family: Georgia, serif
 @import menu
 @import footer
 @import home
+@import ../../../birds/static/stylesheets/bird
 @import ../../../birds/static/stylesheets/birds
