--- a/birds/templates/bird.html
+++ b/birds/templates/bird.html
@@ -6,41 +6,44 @@
 {% block page_title %}{{ bird.common_name }}{% endblock %}
 
 {% block content %}
+
 {% if bird.main_photo_url %}
   <div id="main-photo">
     <img src="{{ bird.main_photo_url }}"/>
   </div>
 {% endif %}
 
-<div id="taxonomy" class="card">
-  <h3>Taxonomy</h3>
-  {% for ancestor in bird.get_ancestors reversed %}
-    <span>
-      {{ ancestor.level|capfirst }}:
-      {{ ancestor.name }}
-      {% if ancestor.common_name %}
-        ({{ ancestor.common_name }})
-      {% endif %}
-    </span>
-  {% endfor %}
-  <span>Scientific name: <i>{{ bird.name }}</i></span>
-  <span>French name: {{ bird.french_name }}</span>
-</div>
-
-{% if bird.nacc_annotation or bird.get_nacc_statuses %}
-<div id="nacc" class="card">
-  <h3>NACC Information</h3>
-  {% if bird.nacc_annotation %}
-    <span>Annotation: {{ bird.nacc_annotation }}</span>
-  {% endif %}
-
-  {% if bird.get_nacc_statuses %}
-    {% for status in bird.get_nacc_statuses %}
-      <span>Status: {{ status }}</span>
+<div id="cards">
+  <div id="taxonomy" class="card">
+    <h3>Taxonomy</h3>
+    {% for ancestor in bird.get_ancestors reversed %}
+      <span>
+        {{ ancestor.level|capfirst }}:
+        {{ ancestor.name }}
+        {% if ancestor.common_name %}
+          ({{ ancestor.common_name }})
+        {% endif %}
+      </span>
     {% endfor %}
+    <span>Scientific name: <i>{{ bird.name }}</i></span>
+    <span>French name: {{ bird.french_name }}</span>
+  </div>
+
+  {% if bird.nacc_annotation or bird.get_nacc_statuses %}
+  <div id="nacc" class="card">
+    <h3>NACC Information</h3>
+    {% if bird.nacc_annotation %}
+      <span>Annotation: {{ bird.nacc_annotation }}</span>
+    {% endif %}
+
+    {% if bird.get_nacc_statuses %}
+      {% for status in bird.get_nacc_statuses %}
+        <span>Status: {{ status }}</span>
+      {% endfor %}
+    {% endif %}
+  </div>
   {% endif %}
 </div>
-{% endif %}
 
 {% if bird.blurb %}
 <div id="blurb" class="markdown-section">
