--- a/website/static/stylesheets/page.sass
+++ b/website/static/stylesheets/page.sass
@@ -14,6 +14,8 @@ html, body
   background: $chickadee-cream
   padding: 30px
   border-radius: 2px
+  overflow: auto
+  height: auto
 
 #footer
   margin-top: 20px
