--- a/birds/static/stylesheets/bird.sass
+++ b/birds/static/stylesheets/bird.sass
@@ -4,14 +4,14 @@
     margin-right: 50px
 
   #cards
+    max-width: 50%
     float: left
 
     .card
-      display: inline-block
       float: left
       padding: 10px
       margin-bottom: 20px
-      margin-right: 20px
+      margin-left: 20px
       border: 1px solid $chickadee-light-gray
       border-radius: 5px
 
