fix card styling on bird page

--- a/birds/static/stylesheets/bird.sass
+++ b/birds/static/stylesheets/bird.sass
@@ -2,26 +2,23 @@
   #main-photo
     float: left
     margin-right: 50px
+    margin-bottom: 50px
 
-  #cards
-    max-width: 50%
+  .card
     float: left
+    margin-right: 20px
+    margin-bottom: 20px
+    padding: 10px
+    border: 1px solid $chickadee-light-gray
+    border-radius: 5px
 
-    .card
-      float: left
-      padding: 10px
-      margin-bottom: 20px
-      margin-left: 20px
-      border: 1px solid $chickadee-light-gray
-      border-radius: 5px
+    h3
+      margin-bottom: 10px
+      text-align: center
 
-      h3
-        margin-bottom: 10px
-        text-align: center
-
-      span
-        display: block
-        clear: both
+    span
+      display: block
+      clear: both
 
   #blurb
     float: left
