--- a/birds/static/stylesheets/bird.sass
+++ b/birds/static/stylesheets/bird.sass
@@ -8,6 +8,7 @@
     float: left
     margin-right: 20px
     margin-bottom: 20px
+    max-width: 500px
     padding: 10px
     border: 1px solid $chickadee-light-gray
     border-radius: 5px
