--- a/website/static/stylesheets/font.sass
+++ b/website/static/stylesheets/font.sass
@@ -1,5 +1,5 @@
 @font-face
-  font-family: 'adelaida'
+  font-family: 'adelaidaregular'
   src: url('../fonts/adelaida/adelaida-regular-webfont.eot')
   src: url('../fonts/adelaida/adelaida-regular-webfont.eot?#iefix') format('embedded-opentype')
   src: url('../fonts/adelaida/adelaida-regular-webfont.woff') format('woff')
@@ -21,7 +21,7 @@ h1, h2, h3, h4
   font-weight: normal
 
 h1
-  font-family: 'adelaida', sans-serif
+  font-family: 'adelaidaregular', sans-serif
 
 h2
   font-family: 'Dosis', sans-serif
