move admin link out of main menu

--- a/website/static/stylesheets/header.sass
+++ b/website/static/stylesheets/header.sass
@@ -26,3 +26,8 @@
 
       &:hover, &.active
         color: lighten($peach-orange, 5%)
+
+  #admin-link
+    position: absolute
+    top: 0
+    right: 0
