--- a/website/templates/header.html
+++ b/website/templates/header.html
@@ -21,6 +21,7 @@
       Birds
     </a>
 
-    <a href="{% url 'admin:index' %}">Admin</a>
   </div>
+
+  <a id="admin-link" href="{% url 'admin:index' %}">Admin</a>
 </div>
