--- a/website/static/stylesheets/styles.sass
+++ b/website/static/stylesheets/styles.sass
@@ -20,3 +20,4 @@ $base-font-family: Georgia, serif
 @import home
 @import ../../../birds/static/stylesheets/bird
 @import ../../../birds/static/stylesheets/birds
+@import ../../../creations/static/stylesheets/books
