--- a/creations/templates/books.html
+++ b/creations/templates/books.html
@@ -7,7 +7,9 @@
 {% block content %}
 {% for book in books %}
   <div id="book">
-    <img src="{{ MEDIA_URL }}{{ book.photo }}" />
+    {% if book.photo %}
+      <img src="{{ MEDIA_URL }}{{ book.photo }}" />
+    {% endif %}
     <div class="info">
       <span class="title"><i>{{ book.title }}</i></span>
       <span class="date">{{ book.date_published|date:"Y" }}</span>
