unit test setup (sqlite for unit testing)

--- a/creations/static/stylesheets/books.sass
+++ b/creations/static/stylesheets/books.sass
@@ -2,14 +2,20 @@
   #book
     width: 100%
     clear: both
+    margin: 40px 0
+    border-top: 1px solid gray
+
+    &:first-child
+      border-bottom: none
 
     img
       float: left
       width: 100px
-      margin-right: 40px
 
     .info
       float: left
+      margin-left: 50px
+
       span
         float: left
         margin-right: 20px
